# CPDW-VI

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/assets/: cioos-theme.css
docs/notebooks/: 01_obis_rest_api.ipynb  01_pyobis_quickstart.ipynb  02_obis_parquet_duckdb.ipynb  02_obis_rest_api.ipynb  03_worms_pyworms.ipynb  04_obis_to_cioos_metadata.ipynb  index.md  workshop_ex_emof.csv  workshop_ex_event_core.csv  workshop_ex_occurrence.csv  workshop_ex_onland.csv  workshop_validate_biodiversity_data.ipynb
docs/presentations/: CPDW_Pyobistools_CIOOS.pptx  OBIS2CIOOS.pptx
docs/workshop/: dataset.md  overview.md  setup.md
notebooks/: 03_obis_parquet_duckdb.ipynb
