[project]
name = "obis-presentation"
version = "0.1.0"
description = "15-min talk + 45-min Jupyter notebooks on retrieving OBIS data and how it feeds CIOOS pipelines."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyobis>=1.6.1",
    "duckdb>=1.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "folium>=0.16.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "cioos-metadata-conversion",
]

[tool.uv]
package = false

[tool.uv.sources]
cioos-metadata-conversion = { path = "../../cioos-metadata-conversion", editable = true }

[dependency-groups]
dev = [
    "jupyterlab>=3.5.3",
    "nbclient>=0.10.4",
]
