[project]
name = "obis-presentation"
version = "0.1.0"
description = "Workshop notebooks on retrieving OBIS data via the REST API, geoparquet exports, and resolving names against WoRMS."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyworms>=0.3.0",
    "duckdb>=1.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "jupyterlab>=3.5.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "jupyterlab>=3.5.3",
    "nbclient>=0.10.4",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-jupyter>=0.25.0",
    "pymdown-extensions>=10.7",
]
